
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_int32_t ;
struct sc_pchinfo {int master; struct sc_info* parent; } ;
struct sc_info {int lock; } ;
typedef int kobj_t ;


 int emu_vpos (struct sc_info*,int ) ;
 int snd_mtxlock (int ) ;
 int snd_mtxunlock (int ) ;

__attribute__((used)) static u_int32_t
emupchan_getptr(kobj_t obj, void *data)
{
 struct sc_pchinfo *ch = data;
 struct sc_info *sc = ch->parent;
 int r;

 snd_mtxlock(sc->lock);
 r = emu_vpos(sc, ch->master);
 snd_mtxunlock(sc->lock);

 return r;
}
